<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <com.orange.oy.view.AppTitle
        android:id="@+id/calendar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/app_background2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calendar_left"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="＜"
            android:textColor="@color/app_textcolor"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/calendar_middle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="2015年 5月"
            android:textColor="@color/app_textcolor"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/calendar_right"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="＞"
            android:textColor="@color/app_textcolor"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/app_background2"
        android:orientation="horizontal">

        <TextView
            style="@style/weekstyle"
            android:layout_marginRight="5dp"
            android:text="@string/week_1"/>

        <TextView
            style="@style/weekstyle"
            android:layout_marginRight="5dp"
            android:text="@string/week_2"/>

        <TextView
            style="@style/weekstyle"
            android:layout_marginRight="5dp"
            android:text="@string/week_3"/>

        <TextView
            style="@style/weekstyle"
            android:layout_marginRight="5dp"
            android:text="@string/week_4"/>

        <TextView
            style="@style/weekstyle"
            android:layout_marginRight="5dp"
            android:text="@string/week_5"/>

        <TextView
            style="@style/weekstyle"
            android:layout_marginRight="5dp"
            android:text="@string/week_6"
            android:textColor="@color/calendar_free"/>

        <TextView
            style="@style/weekstyle"
            android:text="@string/week_7"
            android:textColor="@color/calendar_free"/>
    </LinearLayout>

    <GridView
        android:id="@+id/calendar_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:cacheColorHint="#00000000"
        android:horizontalSpacing="5dp"
        android:numColumns="7"
        android:verticalSpacing="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
