<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_background2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="热门城市"
        android:textColor="#231916"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_cs_item1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_2"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_cs_item2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_1"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_cs_item3"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_3"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_cs_item4"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_4"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/item_cs_item5"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_5"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_cs_item6"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_6"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_cs_item7"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_7"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_cs_item8"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_8"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:paddingTop="15dp">


            <TextView
                android:id="@+id/item_cs_item9"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_9"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_cs_item10"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_10"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_cs_item11"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:text="@string/citysearch_11"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/citysearch_bg3"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="1dp"
                android:textColor="@color/citysearch_text"
                android:textSize="14sp"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>