<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_background2"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <com.orange.oy.view.AppTitle
        android:id="@+id/forgetpw_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/forgetpw_moblie"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/dialog_margin"
        android:background="@drawable/itemalltask_background"
        android:hint="@string/register_hint_item1"
        android:inputType="number"
        android:maxLength="11"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="@color/homepage_notselect"
        android:textCursorDrawable="@null"
        android:textSize="13sp"/>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/dialog_margin"
        android:background="@drawable/itemalltask_background"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/forgetpw_captcha"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_hint_item4"
            android:paddingLeft="10dp"
            android:textColor="@color/homepage_notselect"
            android:textCursorDrawable="@null"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/forgetpw_getcaptcha"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/viewdialogtasklocation1_bg"
            android:gravity="center"
            android:text="获取验证码"
            android:textColor="@color/app_background2"
            android:textSize="13sp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/forgetpw_newpw"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/dialog_margin"
        android:background="@drawable/itemalltask_background"
        android:digits="@string/register_password_text"
        android:hint="请输入新密码"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="@color/homepage_notselect"
        android:textCursorDrawable="@null"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/forgetpw_submit"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/ouye_progressbarmargin"
        android:background="@drawable/viewdialogtasklocation1_bg"
        android:text="@string/forgetpw_submit"
        android:textColor="#ffffffff"
        android:textSize="14sp"/>
</LinearLayout>
